--- a/style.css
+++ b/style.css
@@ -1,69 +1,76 @@
 .calculator-container {
-    max-width: 300px;
-    margin: auto;
-    background-color: #333;
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  max-width: 300px;
+  margin: auto;
+  background-color: #333;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
-.display {
-    width: 100%;
-    height: 60px;
-    background-color: #eee;
-    margin-bottom: 15px;
-    padding: 0px;
-    font-size: 2em;
-    text-align: right;
-    border: none;
-    border-radius: 5px;
+#display {
+  width: 100%;
+  height: 60px;
+  background-color: #eee;
+  margin-bottom: 15px;
+  padding: 0px;
+  font-size: 2em;
+  text-align: right;
+  border: none;
+  border-radius: 5px;
 }
 
 .buttons {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 20px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 20px;
 }
 
 .buttons button {
-    width: 60px;
-    height: 60px;
-    font-size: 1.5em;
-    border: none;
-    border-radius: 5px;
-    background-color: #666;
-    color: white;
-    cursor: pointer;
-    transition: background-color 0.2s ease;
+  width: 60px;
+  height: 60px;
+  font-size: 1.5em;
+  border: none;
+  border-radius: 5px;
+  /* background-color: #666; */
+  color: white;
+  cursor: pointer;
+  transition: background-color 0.2s ease;
+}
+
+.nbr,
+.zero {
+  background-color: #666;
 }
 
 .buttons button:hover {
-    background-color: #888;
+  background-color: #888;
 }
 
 .operator {
-    background-color: orange;
+  background-color: orange;
 }
 
 .operator:hover {
-    background-color: darkorange;
+  background-color: darkorange;
 }
 
-.clear, .delete {
-    background-color: #c00;
+.clear,
+.delete {
+  background-color: #c00;
 }
 
-.clear:hover, .delete:hover {
-    background-color: #e00;
+.clear:hover,
+.delete:hover {
+  background-color: #e00;
 }
 
 .equal {
-    background-color: #0c0;
-    /* grid-column: span 2; Example for a wider equals button */
+  background-color: #0c0;
+  /* grid-column: span 2; Example for a wider equals button */
 }
 
 .equal:hover {
-    background-color: #0a0;
+  background-color: #0a0;
 }
 
 /* .zero {
